--- a/src/pages/header/header.html
+++ b/src/pages/header/header.html
@@ -13,6 +13,7 @@
         <li><a href="javascript: void(0)" title="" (click)="shop()">SHOP</a></li>
         <li><a href="javascript: void(0)" title="" (click)="xemPhim()">Phim</a></li>
         <li><a href="javascript: void(0)" title="" (click)="hocVien()">Hoc vien</a></li>
+        <li><a href="javascript: void(0)" title="" (click)="login()">Login</a></li>
     </ul>
     <div class="clr"></div>
 </div>
